# config-renderer

./: .gitignore  LICENSE  config-renderer.py  pyproject.toml  readme.md
docs/: index.html
src/config_renderer/: __init__.py
